# xtrem-craft-workshop

./: .gitignore  README.md
.github/workflows/: python-pipe.yml
csharp/: .editorconfig  Directory.Build.props  money-problem.slnx
csharp/money-problem.Domain/: Bank.cs  Currency.cs  MissingExchangeRateException.cs  MoneyCalculator.cs  money-problem.Domain.csproj
csharp/money-problem.Tests/: BankTest.cs  MoneyCalculatorShould.cs  money-problem.Tests.csproj
docs/solution/: 01-code-review.md  02-dirty-code-clean-code.md  03-expressive-code.md  06-example-mapping.md
docs/step-by-step/: 07-test-driven-development.md
java/: pom.xml
python/: pyproject.toml  pytest.ini
python/mutants/: pyproject.toml  setup.cfg
python/mutants/src/: bank.py  missing_exchange_rate_error.py  money_calculator.py
python/mutants/tests/: test_bank.py  test_money.py
python/src/: bank.py  currency.py  money.py  money_calculator.py  portfolio.py
python/src/xterm_craft_workshop/: bank.py  currency.py  money_calculator.py  portfolio.py
python/tests/: BankBuilder.py  test_bank.py  test_money.py  test_portfolio.py
typescript/: eslint.config.mjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: Bank.ts
typescript/tests/: MoneyCalculator.spec.ts
