[project]
name = "xtrem-craft-workshop"
version = "1.0.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=8.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = { cmd = "pytest", help = "runs unit tests" }
requirements = { cmd = "uv pip compile pyproject.toml --no-deps --no-annotate -o requirements.txt", help = "syncs requirements.txt"}